--- a/composer.json
+++ b/composer.json
@@ -25,9 +25,9 @@
     "require": {
         "php": ">=8.0",
         "psr/http-server-handler": ">=1.0.0",
-        "psr/http-server-middleware": "^1.0"
+        "psr/http-server-middleware": ">=1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9"
+        "phpunit/phpunit": ">=9.0"
     }
 }
