--- a/composer.json
+++ b/composer.json
@@ -23,9 +23,9 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "php": ">=8.0",
-        "psr/http-server-handler": ">=1.0.0",
-        "psr/http-server-middleware": ">=1.0"
+        "php": ">=8.1",
+        "psr/http-server-handler": "^1.0.0",
+        "psr/http-server-middleware": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": ">=9.0"
